[package]
name = "shell-search"
version = "0.1.0"
authors = ["David Keijser <keijser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v3_22"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v2_44"]
